--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1191,7 +1191,7 @@
   "block.minecraft.stripped_warped_hyphae": "Stripped Warped Hyphae",
   "block.minecraft.crimson_stem": "Crimson Stem",
   "block.minecraft.stripped_crimson_stem": "Stripped Crimson Stem",
-  "block.minecraft.crimson_hyphae": "Fire Hydrant *",
+  "block.minecraft.crimson_hyphae": "Crimson Hyphae",
   "block.minecraft.stripped_crimson_hyphae": "Stripped Crimson Hyphae",
   "block.minecraft.warped_nylium": "Warped Nylium",
   "block.minecraft.crimson_nylium": "Crimson Nylium",
@@ -1513,7 +1513,7 @@
   "block.minecraft.soul_campfire": "Manhole with Steam *",
   "block.minecraft.beehive": "Various Girders (change honey level blockstate)",
   "block.minecraft.bee_nest": "Bee Nest",
-  "block.minecraft.honey_block": "Honey Block",
+  "block.minecraft.honey_block": "Fire Hydrant *",
   "block.minecraft.honeycomb_block": "Honeycomb Block",
   "block.minecraft.lodestone": "Lodestone",
   "block.minecraft.netherite_block": "Block of Netherite",
