Update rails in lang

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1677,9 +1677,9 @@
   "item.minecraft.music_disc_blocks": "Sloped Rail *",
   "item.minecraft.music_disc_chirp": "Right Straight to 45 Rail *",
   "item.minecraft.music_disc_far": "Right Turnout Rail *",
-  "item.minecraft.music_disc_mall": "Music Disc",
-  "item.minecraft.music_disc_mellohi": "Music Disc",
-  "item.minecraft.music_disc_stal": "Music Disc",
+  "item.minecraft.music_disc_mall": "Straight rail (item frame) *",
+  "item.minecraft.music_disc_mellohi": "Right turnout 45 to straight *",
+  "item.minecraft.music_disc_stal": "Left turnout 45 to straight *",
   "item.minecraft.music_disc_strad": "Music Disc",
   "item.minecraft.music_disc_ward": "Music Disc",
   "item.minecraft.music_disc_11": "Music Disc",
