--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1211,7 +1211,7 @@
   "block.minecraft.warped_planks": "Warped Planks",
   "block.minecraft.warped_slab": "Warped Slab",
   "block.minecraft.warped_pressure_plate": "Warped Pressure Plate",
-  "block.minecraft.warped_fence": "Warped Fence",
+  "block.minecraft.warped_fence": "Truss Beam *",
   "block.minecraft.warped_trapdoor": "Iron Railing (Fire Escape)*",
   "block.minecraft.warped_fence_gate": "Catenary Pole *",
   "block.minecraft.warped_stairs": "Warped Stairs",
