--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1224,7 +1224,7 @@
   "block.minecraft.crimson_pressure_plate": "Crimson Pressure Plate",
   "block.minecraft.crimson_fence": "Crimson Fence",
   "block.minecraft.crimson_trapdoor": "Crimson Trapdoor",
-  "block.minecraft.crimson_fence_gate": "Crimson Fence Gate",
+  "block.minecraft.crimson_fence_gate": "Beam Arch *",
   "block.minecraft.crimson_stairs": "Crimson Stairs",
   "block.minecraft.crimson_button": "Crimson Button",
   "block.minecraft.crimson_door": "Crimson Door",
