Rename prismarine blocks

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -989,7 +989,7 @@
   "block.minecraft.dark_oak_slab": "Dark Oak Slab",
   "block.minecraft.dark_prismarine_slab": "Iron Grate Slab (Fire Escape)*",
   "block.minecraft.prismarine_slab": "Prismarine Slab",
-  "block.minecraft.prismarine_brick_slab": "Prismarine Brick Slab",
+  "block.minecraft.prismarine_brick_slab": "Light Brick Slab *",
   "block.minecraft.bricks": "Bricks",
   "block.minecraft.tnt": "TNT",
   "block.minecraft.bookshelf": "Bookshelf",
@@ -1010,7 +1010,7 @@
   "block.minecraft.dark_oak_stairs": "Dark Oak Stairs",
   "block.minecraft.dark_prismarine_stairs": "Fire Escape Stairs (Fire Escapes should be max 10 stories) *",
   "block.minecraft.prismarine_stairs": "Prismarine Stairs",
-  "block.minecraft.prismarine_brick_stairs": "Prismarine Brick Stairs",
+  "block.minecraft.prismarine_brick_stairs": "Light Brick Stairs *",
   "block.minecraft.chest": "Chest",
   "block.minecraft.trapped_chest": "Trapped Chest",
   "block.minecraft.redstone_wire": "Redstone Wire",
@@ -1223,7 +1223,7 @@
   "block.minecraft.crimson_slab": "Crimson Slab",
   "block.minecraft.crimson_pressure_plate": "Crimson Pressure Plate",
   "block.minecraft.crimson_fence": "Crimson Fence",
-  "block.minecraft.crimson_trapdoor": "Crimson Trapdoor",
+  "block.minecraft.crimson_trapdoor": "Powered Rail *",
   "block.minecraft.crimson_fence_gate": "Beam Arch *",
   "block.minecraft.crimson_stairs": "Crimson Stairs",
   "block.minecraft.crimson_button": "Crimson Button",
@@ -1268,7 +1268,7 @@
   "block.minecraft.quartz_stairs": "Quartz Stairs",
   "block.minecraft.slime_block": "Slime Block",
   "block.minecraft.prismarine": "Prismarine",
-  "block.minecraft.prismarine_bricks": "Prismarine Bricks",
+  "block.minecraft.prismarine_bricks": "Light Bricks",
   "block.minecraft.dark_prismarine": "Dark Prismarine",
   "block.minecraft.sea_lantern": "Sea Lantern",
   "block.minecraft.end_rod": "RC Mini Street Lamp *",
