Add bollard to lang

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1540,6 +1540,7 @@
   "block.minecraft.chiseled_nether_bricks": "Chiseled Nether Bricks",
   "block.minecraft.quartz_bricks": "Quartz Bricks",
   "block.minecraft.chain": "Chain",
+  "block.minecraft.raw_iron_block": "Dock Bollard *",
   "item.minecraft.name_tag": "Name Tag",
   "item.minecraft.lead": "Lead",
   "item.minecraft.iron_shovel": "Iron Shovel",
