Add red van to lang

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1301,7 +1301,7 @@
   "block.minecraft.blue_shulker_box": "Blue Shulker Box",
   "block.minecraft.brown_shulker_box": "Brown Shulker Box",
   "block.minecraft.green_shulker_box": "Green Shulker Box",
-  "block.minecraft.red_shulker_box": "Red Shulker Box",
+  "block.minecraft.red_shulker_box": "Red Satomobile Van* (item frame model)",
   "block.minecraft.black_shulker_box": "Black Shulker Box",
   "block.minecraft.white_glazed_terracotta": "White Glazed Terracotta",
   "block.minecraft.orange_glazed_terracotta": "Orange Glazed Terracotta",
