Update streetlight lang and model

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1121,7 +1121,7 @@
   "block.minecraft.attached_pumpkin_stem": "Attached Pumpkin Stem",
   "block.minecraft.pumpkin": "Pumpkin",
   "block.minecraft.carved_pumpkin": "Carved Pumpkin",
-  "block.minecraft.jack_o_lantern": "RC Streetlights *",
+  "block.minecraft.jack_o_lantern": "Jack O Lantern",
   "block.minecraft.netherrack": "Netherrack",
   "block.minecraft.soul_sand": "Soul Sand",
   "block.minecraft.glowstone": "Glowstone",
@@ -1541,6 +1541,7 @@
   "block.minecraft.quartz_bricks": "Quartz Bricks",
   "block.minecraft.chain": "Chain",
   "block.minecraft.raw_iron_block": "Dock Bollard *",
+  "block.minecraft.purple_candle": "Streetlight *",
   "item.minecraft.name_tag": "Name Tag",
   "item.minecraft.lead": "Lead",
   "item.minecraft.iron_shovel": "Iron Shovel",
