--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1537,7 +1537,7 @@
   "block.minecraft.polished_blackstone_pressure_plate": "Polished Blackstone Pressure Plate",
   "block.minecraft.polished_blackstone_button": "Polished Blackstone Button",
   "block.minecraft.cracked_nether_bricks": "Cracked Nether Bricks",
-  "block.minecraft.chiseled_nether_bricks": "Chiseled Nether Bricks",
+  "block.minecraft.chiseled_nether_bricks": "Crate *",
   "block.minecraft.quartz_bricks": "Quartz Bricks",
   "block.minecraft.chain": "Chain",
   "block.minecraft.raw_iron_block": "Dock Bollard *",
