Crate stack lang

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1542,6 +1542,7 @@
   "block.minecraft.chain": "Chain",
   "block.minecraft.raw_iron_block": "Dock Bollard *",
   "block.minecraft.purple_candle": "Streetlight *",
+  "block.minecraft.deepslate": "Crate Stack *",
   "item.minecraft.name_tag": "Name Tag",
   "item.minecraft.lead": "Lead",
   "item.minecraft.iron_shovel": "Iron Shovel",
