--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1543,6 +1543,12 @@
   "block.minecraft.raw_iron_block": "Dock Bollard *",
   "block.minecraft.purple_candle": "Streetlight *",
   "block.minecraft.deepslate": "Crate Stack *",
+  "block.minecraft.amethyst_block": "Block of Amethyst",
+  "block.minecraft.small_amethyst_bud": "Small Amethyst Bud",
+  "block.minecraft.medium_amethyst_bud": "Large Open Wooden Doors *",
+  "block.minecraft.large_amethyst_bud": "Large Amethyst Bud",
+  "block.minecraft.amethyst_cluster": "Amethyst Cluster",
+  "block.minecraft.budding_amethyst": "Budding Amethyst",
   "item.minecraft.name_tag": "Name Tag",
   "item.minecraft.lead": "Lead",
   "item.minecraft.iron_shovel": "Iron Shovel",
