--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -958,7 +958,7 @@
   "block.minecraft.rose_bush": "Rose Bush",
   "block.minecraft.peony": "Peony",
   "block.minecraft.seagrass": "Seagrass",
-  "block.minecraft.sea_pickle": "Sea Pickle",
+  "block.minecraft.sea_pickle": "Road Slope *",
   "block.minecraft.brown_mushroom": "Brown Mushroom",
   "block.minecraft.red_mushroom_block": "Red Mushroom Block",
   "block.minecraft.brown_mushroom_block": "Brown Mushroom Block",
