--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1054,7 +1054,7 @@
   "block.minecraft.heavy_weighted_pressure_plate": "Heavy Weighted Pressure Plate",
   "block.minecraft.iron_door": "Iron Door",
   "block.minecraft.redstone_ore": "Redstone Ore",
-  "block.minecraft.redstone_torch": "Redstone Torch",
+  "block.minecraft.redstone_torch": "Red Paper Lantern *",
   "block.minecraft.redstone_wall_torch": "Redstone Wall Torch",
   "block.minecraft.stone_button": "Stone Button",
   "block.minecraft.oak_button": "Oak Button",
