--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1120,7 +1120,7 @@
   "block.minecraft.pumpkin_stem": "Pumpkin Stem",
   "block.minecraft.attached_pumpkin_stem": "Attached Pumpkin Stem",
   "block.minecraft.pumpkin": "Pumpkin",
-  "block.minecraft.carved_pumpkin": "Carved Pumpkin",
+  "block.minecraft.carved_pumpkin": "Crate Stack *",
   "block.minecraft.jack_o_lantern": "Jack O Lantern",
   "block.minecraft.netherrack": "Netherrack",
   "block.minecraft.soul_sand": "Soul Sand",
@@ -1542,7 +1542,7 @@
   "block.minecraft.chain": "Chain",
   "block.minecraft.raw_iron_block": "Dock Bollard *",
   "block.minecraft.purple_candle": "Streetlight *",
-  "block.minecraft.deepslate": "Crate Stack *",
+  "block.minecraft.deepslate": "Deepslate",
   "block.minecraft.amethyst_block": "Block of Amethyst",
   "block.minecraft.small_amethyst_bud": "Small Amethyst Bud",
   "block.minecraft.medium_amethyst_bud": "Large Open Wooden Doors *",
