--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1261,12 +1261,12 @@
   "block.minecraft.potatoes": "Potatoes",
   "block.minecraft.daylight_detector": "Daylight Detector",
   "block.minecraft.nether_quartz_ore": "Nether Quartz Ore",
-  "block.minecraft.hopper": "Trash Can *",
+  "block.minecraft.hopper": "Hopper",
   "block.minecraft.quartz_block": "Block of Quartz",
   "block.minecraft.chiseled_quartz_block": "Chiseled Quartz Block",
   "block.minecraft.quartz_pillar": "Quartz Pillar",
   "block.minecraft.quartz_stairs": "Quartz Stairs",
-  "block.minecraft.slime_block": "Slime Block",
+  "block.minecraft.slime_block": "Trash Can *",
   "block.minecraft.prismarine": "Prismarine",
   "block.minecraft.prismarine_bricks": "Light Bricks",
   "block.minecraft.dark_prismarine": "Dark Prismarine",
