--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1248,7 +1248,7 @@
   "block.minecraft.emerald_block": "Block of Emerald",
   "block.minecraft.redstone_block": "Block of Redstone",
   "block.minecraft.tripwire": "Tripwire",
-  "block.minecraft.tripwire_hook": "Various Building Signs | Edit block states to switch model *",
+  "block.minecraft.tripwire_hook": "Various Building Signs *| Edit block states to switch model *",
   "block.minecraft.command_block": "Command Block",
   "block.minecraft.repeating_command_block": "Repeating Command Block",
   "block.minecraft.chain_command_block": "Chain Command Block",
@@ -1511,7 +1511,7 @@
   "block.minecraft.sweet_berry_bush": "Sweet Berry Bush",
   "block.minecraft.campfire": "Campfire",
   "block.minecraft.soul_campfire": "Manhole with Steam *",
-  "block.minecraft.beehive": "Various Girders (change honey level blockstate)",
+  "block.minecraft.beehive": "Various Girders *(change honey level blockstate)",
   "block.minecraft.bee_nest": "Bee Nest",
   "block.minecraft.honey_block": "Fire Hydrant *",
   "block.minecraft.honeycomb_block": "Honeycomb Block",
