--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1410,7 +1410,7 @@
   "block.minecraft.cave_air": "Cave Air",
   "block.minecraft.bubble_column": "Bubble Column",
   "block.minecraft.dead_tube_coral_block": "Dead Tube Coral Block",
-  "block.minecraft.dead_brain_coral_block": "Dead Brain Coral Block",
+  "block.minecraft.dead_brain_coral_block": "Sidewalk Block *",
   "block.minecraft.dead_bubble_coral_block": "Dead Bubble Coral Block",
   "block.minecraft.dead_fire_coral_block": "Dead Fire Coral Block",
   "block.minecraft.dead_horn_coral_block": "Dead Horn Coral Block",
