--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1132,7 +1132,7 @@
   "block.minecraft.light_blue_wool": "Light Blue Wool",
   "block.minecraft.yellow_wool": "Yellow Wool",
   "block.minecraft.lime_wool": "Lime Wool",
-  "block.minecraft.pink_wool": "Pink Wool",
+  "block.minecraft.pink_wool": "Green Wood *",
   "block.minecraft.gray_wool": "Gray Wool",
   "block.minecraft.light_gray_wool": "Light Gray Wool",
   "block.minecraft.cyan_wool": "Cyan Wool",
