--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -862,7 +862,7 @@
   "block.minecraft.cut_red_sandstone": "Cut Red Sandstone",
   "block.minecraft.gravel": "Gravel",
   "block.minecraft.gold_ore": "Gold Ore",
-  "block.minecraft.nether_gold_ore": "Nether Gold Ore",
+  "block.minecraft.nether_gold_ore": "Yellow Facade block *",
   "block.minecraft.iron_ore": "Iron Ore",
   "block.minecraft.coal_ore": "Coal Ore",
   "block.minecraft.oak_wood": "Oak Wood",
