--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1484,7 +1484,7 @@
   "block.minecraft.polished_andesite_slab": "Polished Andesite Slab",
   "block.minecraft.diorite_slab": "Diorite Slab",
   "block.minecraft.brick_wall": "Brick Wall",
-  "block.minecraft.prismarine_wall": "Prismarine Wall",
+  "block.minecraft.prismarine_wall": "Steel Ornate Fence *",
   "block.minecraft.red_sandstone_wall": "RC Street Pole *",
   "block.minecraft.mossy_stone_brick_wall": "Mossy Stone Brick Wall",
   "block.minecraft.granite_wall": "Granite Wall",
