--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1426,7 +1426,7 @@
   "block.minecraft.horn_coral": "Horn Coral",
   "block.minecraft.dead_tube_coral": "Dead Tube Coral",
   "block.minecraft.dead_brain_coral": "Waste Paper Trashcan *",
-  "block.minecraft.dead_bubble_coral": "Dead Bubble Coral",
+  "block.minecraft.dead_bubble_coral": "Pride Flag*",
   "block.minecraft.dead_fire_coral": "Dead Fire Coral",
   "block.minecraft.dead_horn_coral": "Dead Horn Coral",
   "block.minecraft.tube_coral_fan": "Tube Coral Fan",
