--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -69,6 +69,7 @@
   "block.minecraft.warped_planks": "Dark Green Planks *",
   "block.minecraft.dark_prismarine": "White Adobe *",
   "block.minecraft.sea_lantern": "Red Lantern *",
+  "block.minecraft.diamond_ore": "Paper Panel *",
   "block.minecraft.purpur_block": "Gold Block *",
   "block.minecraft.purpur_stairs": "Gold Stairs *",
   "block.minecraft.purpur_slab": "Gold Slab *"
