--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -43,6 +43,7 @@
   "block.minecraft.purple_candle": "Streetlight *",
   "block.minecraft.medium_amethyst_bud": "Large Open Wooden Doors *",
   "block.minecraft.large_amethyst_bud": "Large Closed Wooden Doors *",
+  "block.minecraft.warped_stairs": "Metal Stairs *",
   "item.minecraft.emerald": "Yuan *",
   "item.minecraft.gold_ingot": "Yuan Note *",
   "item.minecraft.string": "Overhead Cables *",
