--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.minecraft.sea_pickle": "Road Slope *",
+  "block.minecraft.warped_door": "Green Ornamental Door *",  
   "block.minecraft.birch_door": "Glass Door *",
   "block.minecraft.dark_prismarine_slab": "Iron Grate Slab (Fire Escape)*",
   "block.minecraft.redstone_torch": "Red Paper Lantern *",
