--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -49,14 +49,18 @@
   "item.minecraft.furnace_minecart": "Red Satomobile * (item frame model)",
   "item.minecraft.tnt_minecart": "Orange Satomobile * (item frame model)",
   "item.minecraft.hopper_minecart": "Blue Satomobile * (item frame model)",
-  "item.minecraft.music_disc_13": "Left Turnout Rail *",
+  "item.minecraft.music_disc_11": "Trolley Right Straight to 45 Rail *",
+  "item.minecraft.music_disc_13": "Elevated Left Turnout Rail *",
   "item.minecraft.music_disc_cat": "Left Straight to 45 Rail *",
   "item.minecraft.music_disc_blocks": "Sloped Rail *",
   "item.minecraft.music_disc_chirp": "Right Straight to 45 Rail *",
-  "item.minecraft.music_disc_far": "Right Turnout Rail *",
+  "item.minecraft.music_disc_far": "Elevated Right Turnout Rail *",
   "item.minecraft.music_disc_mall": "Straight rail (item frame) *",
-  "item.minecraft.music_disc_mellohi": "Right turnout 45 to straight *",
-  "item.minecraft.music_disc_stal": "Left turnout 45 to straight *",
+  "item.minecraft.music_disc_mellohi": "Elevated Right turnout 45 to straight *",
+  "item.minecraft.music_disc_stal": "Elevated Left turnout 45 to straight *",
+  "item.minecraft.music_disc_strad": "Trolley Right turnout *",
+  "item.minecraft.music_disc_wait": "Trolley Left Straight to 45 Rail *",
+  "item.minecraft.music_disc_ward": "Trolley Left turnout *",
   "block.minecraft.magenta_stained_glass": "Paper Window Block *",
   "block.minecraft.magenta_stained_glass_pane": "Paper Window Block Pane *",
   "block.minecraft.prismarine_brick_slab": "Light Bricks Slab *",
