--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -29,6 +29,7 @@
   "block.minecraft.dead_fire_coral_fan": "Blue Awning *",
   "block.minecraft.dead_horn_coral_fan": "Yellow Awning *",
   "block.minecraft.prismarine_wall": "Steel Ornate Fence *",
+  "block.minecraft.prismarine_slab": "Sidewalk Block Slab *",
   "block.minecraft.red_sandstone_wall": "RC Street Pole *",
   "block.minecraft.smoker": "Rail Stopper *",
   "block.minecraft.grindstone": "Flagpole (use barriers to extend out)*",
