--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -66,5 +66,6 @@
   "block.minecraft.diamond_ore": "Paper Panel *",
   "block.minecraft.purpur_block": "Gold Block *",
   "block.minecraft.purpur_stairs": "Gold Stairs *",
-  "block.minecraft.purpur_slab": "Gold Slab *"
+  "block.minecraft.purpur_slab": "Gold Slab *",
+  "block.minecraft.red_sandstone_slab": "Grass Slab *"
  }
