--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -67,5 +67,6 @@
   "block.minecraft.purpur_block": "Gold Block *",
   "block.minecraft.purpur_stairs": "Gold Stairs *",
   "block.minecraft.purpur_slab": "Gold Slab *",
-  "block.minecraft.red_sandstone_slab": "Grass Slab *"
+  "block.minecraft.red_sandstone_slab": "Grass Slab *",
+  "block.minecraft.warped_hanging_sign": "Republic City Street Sign *"
  }
