--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -68,5 +68,6 @@
   "block.minecraft.purpur_stairs": "Gold Stairs *",
   "block.minecraft.purpur_slab": "Gold Slab *",
   "block.minecraft.red_sandstone_slab": "Grass Slab *",
-  "block.minecraft.warped_hanging_sign": "Republic City Street Sign *"
+  "block.minecraft.warped_hanging_sign": "Republic City Street Sign *",
+  "block.minecraft.red_nether_brick_wall": "Elevated Support Structure *"
  }
