--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -69,5 +69,6 @@
   "block.minecraft.purpur_slab": "Gold Slab *",
   "block.minecraft.red_sandstone_slab": "Grass Slab *",
   "block.minecraft.warped_hanging_sign": "Republic City Street Sign *",
-  "block.minecraft.red_nether_brick_wall": "Elevated Support Structure *"
+  "block.minecraft.red_nether_brick_wall": "Elevated Support Structure *",
+  "block.minecraft.crimson_button": "Doorknob"
  }
