--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -70,5 +70,5 @@
   "block.minecraft.red_sandstone_slab": "Grass Slab *",
   "block.minecraft.warped_hanging_sign": "Republic City Street Sign *",
   "block.minecraft.red_nether_brick_wall": "Elevated Support Structure *",
-  "block.minecraft.crimson_button": "Doorknob"
+  "block.minecraft.crimson_button": "Doorknob *"
  }
