--- a/assets/tlaminecraft/lang/en_us.json
+++ b/assets/tlaminecraft/lang/en_us.json
@@ -71,5 +71,6 @@
   "block.minecraft.warped_hanging_sign": "Republic City Street Sign *",
   "block.minecraft.red_nether_brick_wall": "Elevated Support Structure *",
   "block.minecraft.crimson_button": "Doorknob *",
-  "block.minecraft.dripstone_block": "Yellow Facade Block *"
+  "block.minecraft.dripstone_block": "Yellow Facade Block *",
+  "block.minecraft.prismarine_bricks": "Light Bricks *"
  }
